Blender crashes after texture bake complete. #35625

Closed
opened 2013-06-04 14:12:33 +02:00 by Sigurd Sorlie · 6 comments

%%%--- Operating System, Graphics card ---

Windows 7, Nvidia Quadro 2000

- Blender version with error, and version that worked ---

Initially worked on Blender official 2.67a release, but then caused error and does not work on any revision.

- Short description of error ---

Baking to texture (any settings and bake option, and on any object) does not work as supposed.
Starts off baking all nice and good with progress in UV editor, then crashes when hit completion.
Blender just automatically closes without any error or bug screen.
checking with other computers finding that bug is within the blender file, not the program itself.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

https://www.dropbox.com/s/i5bj7n1gxikqyjk/wall.blend / or use attached

Open blender file above ^ in any revision in the 2.67 series, use current object/ make new and attempt baking a to any texture.
%%%

%%%--- Operating System, Graphics card --- Windows 7, Nvidia Quadro 2000 - Blender version with error, and version that worked --- Initially worked on Blender official 2.67a release, but then caused error and does not work on any revision. - Short description of error --- Baking to texture (any settings and bake option, and on any object) does not work as supposed. Starts off baking all nice and good with progress in UV editor, then crashes when hit completion. Blender just automatically closes without any error or bug screen. checking with other computers finding that bug is within the blender file, not the program itself. - Steps for others to reproduce the error (preferably based on attached .blend file) --- https://www.dropbox.com/s/i5bj7n1gxikqyjk/wall.blend / or use attached Open blender file above ^ in any revision in the 2.67 series, use current object/ make new and attempt baking a to any texture. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This looks like simple missing NULL pointer check, (happens on render too).

Assigning to Lukas incase the error should be fixed elsewhere.%%%

%%%This looks like simple missing NULL pointer check, (happens on render too). Assigning to Lukas incase the error should be fixed elsewhere.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Hey, thanks a lot for taking the time to fix the problem in such a short time!

By any chance a way to fix a blender file by hand to resolve this issue on my main workfile? as the issue follows the file and not the software itself, i cannot simply append the whole scene from one file to another as the bug follows along, though i can append some parts over without having the bug along. But as i have a big project stored in one file, it is very time consuming taking out every object i need, bake it in another file then get it back. Any quick solutions i could do to fix the file by myself?%%%

%%%Hey, thanks a lot for taking the time to fix the problem in such a short time! By any chance a way to fix a blender file by hand to resolve this issue on my main workfile? as the issue follows the file and not the software itself, i cannot simply append the whole scene from one file to another as the bug follows along, though i can append some parts over without having the bug along. But as i have a big project stored in one file, it is very time consuming taking out every object i need, bake it in another file then get it back. Any quick solutions i could do to fix the file by myself?%%%
Member

%%%Yes, you just need to make sure none of the node groups has a "Missing Datablock". I have attached a demo file with a small script that prints out faulty node groups to help fix this. You can then check the broken materials and either assign a correct node group to these nodes or delete them. Missing data blocks can sometimes happen when you use linked data that gets lost somehow, e.g. by changing file paths. Generally this can break materials of course but should not be a crasher (which is fixed in trunk now).%%%

%%%Yes, you just need to make sure none of the node groups has a "Missing Datablock". I have attached a demo file with a small script that prints out faulty node groups to help fix this. You can then check the broken materials and either assign a correct node group to these nodes or delete them. Missing data blocks can sometimes happen when you use linked data that gets lost somehow, e.g. by changing file paths. Generally this can break materials of course but should not be a crasher (which is fixed in trunk now).%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35625
No description provided.