Fix #35625, crash with NULL pointer after node render. Happens when node group node_tree pointer is NULL, then the group node doesn not produce any execdata and needs to check this accordingly in the freeexec callback.